# CCScope

./: .gitignore  API_REFERENCE.md  README.md  pyproject.toml  requirements.txt
src/cc_analyzer/: __init__.py  analyzer.py  config.py  constants.py  errors.py  langgraph.py  models.py
tests/: helpers.py  test_config_and_models.py  test_langgraph_toolkit.py  test_sync_analyzer.py
