[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccscope"
version = "0.1.0"
description = "Structured C/C++ codebase analysis on top of multilspy and clangd."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "multilspy @ git+https://github.com/microsoft/multilspy.git",
]

[project.optional-dependencies]
agents = [
    "langchain>=1.0.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
